# python-claude-template

./: .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  NEXT_STEPS.md  PROGRESS_SUMMARY.md  README.md  alembic.ini  justfile  pyproject.toml
.claude/: settings.json
.claude/agents/: developer.md  python-developer.md  quick-tasks.md  story-writer.md
.claude/commands/: commit.md  deps.md  lint.md  test.md
.claude/hooks/: auto-format.sh  log-commands.sh  session-start.sh
.claude/skills/python-testing/: SKILL.md
.gemini/: config.yaml
.github/workflows/: ci.yml
alembic/versions/: 2026_01_01_1609-d5b976a1f66e_extract_metadata_fields_into_columns.py  2026_01_01_1611-9edfb5383e88_add_lyrics_fulltext_search.py  2026_01_01_1718-3664e06aa7e0_create_lookup_tables.py  2026_01_01_1719-7bcd23be30c9_populate_lookup_tables.py  2026_01_01_1729-943070a6d1d8_normalize_dance_rhythm.py  2026_01_01_1735-674c9d9d6bd1_normalize_recording_place.py
database/: lyrics_rebet.json  schema.sql
database/analysis/: ANALYSIS_SUMMARY.md  GENRE_INVESTIGATION.md  GENRE_SCRAPING_FIX.md  data_quality_report.json  field_statistics.json  genre_mappings.json  items_with_lyrics.json  lyrics_match_report.json  metadata_fields.json  rebetiko_era_songs.json  uncertain_lyrics_REVIEW.csv  uncertain_matches_review.csv
docs/: ART_GUIDE.md  DATABASE_MIGRATIONS.md  DESIGN.md  GAME_STATE.md  LANGUAGE_GUIDE.md  LYRICS_STATUS.md  NOTION_SETUP.md  RAG_SETUP.md  ROADMAP.md  SONG_PROCESSING.md  STORYLET_FORMAT.md
ideas/: IDEAS.md  MUSIC_SYSTEM.md  opening_sequence_design.docx  opening_sequence_part2.docx
research/: slang_glossary.md
src/: config.py  logger.py
tests/: conftest.py
tools/: analyze_data_quality.py  analyze_database_complete.py  auto_fetch_lyrics.py  fetch_genres.py  fetch_lyrics_online.py  google_lyrics.py  import_lyrics.py  match_lyrics.py  query_db.py  scrape_genre_mappings.py  scrape_genre_mappings_correct.py
