[project]
name = "rebetiko-game"
version = "0.1.0"
description = "Ο Δρόμος του Μάγκα - Rebetiko narrative game tools and content pipeline"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.0",         # Vector database for RAG
    "sqlite-utils>=3.37",      # SQLite utilities
    "pandas>=2.2.0",           # Data manipulation (optional, for analysis)
    "tqdm>=4.66.0",            # Progress bars
    # anthropic - not needed, using Claude Code for processing
    "alembic>=1.17.2",
    "lxml>=6.0.2",
    "beautifulsoup4>=4.14.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, increase strictness later
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_optional = true

# CUSTOMIZE: Add module-specific overrides if needed
# [[tool.mypy.overrides]]
# module = "some_module.*"
# ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
